--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-icons": "^4.11.0",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.16.0",
+    "react-toastify": "^9.1.3",
     "redux": "^4.2.1"
   },
   "devDependencies": {
